// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Select Custom App Method Verify Tests should transform elements when transaction only contains push method type with Custom App authenticator key, autoChallenge option, and has verify with something else link 1`] = `
Object {
  "data": Object {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.custom_app.push.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      Object {
        "label": "oie.custom_app.sendPushButton",
        "options": Object {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "contentType": "footer",
        "options": Object {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select Custom App Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option and Custom App authenticator key 1`] = `
Object {
  "data": Object {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.custom_app.push.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      Object {
        "label": "oie.custom_app.sendPushButton",
        "options": Object {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction contains push and totp method types 1`] = `
Object {
  "data": Object {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.verify.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Get a push notification",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "abcde1234",
                  "authenticator.methodType": "push",
                },
                "ariaLabel": "Select to get a push notification.",
                "ctaLabel": "Select",
                "key": "okta_verify",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
            Object {
              "label": "Enter a code",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "abcde1234",
                  "authenticator.methodType": "totp",
                },
                "ariaLabel": "Select to enter a code.",
                "ctaLabel": "Select",
                "key": "okta_verify",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-verify-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option 1`] = `
Object {
  "data": Object {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.okta_verify.push.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      Object {
        "label": "oie.okta_verify.sendPushButton",
        "options": Object {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option and has verify with something else link 1`] = `
Object {
  "data": Object {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.okta_verify.push.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      Object {
        "label": "oie.okta_verify.sendPushButton",
        "options": Object {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "contentType": "footer",
        "options": Object {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
